moved MS/gout description to start
moved to \Gls for abbreviations after a fullstop

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -6,14 +6,42 @@ library(kableExtra)
 ```
 
 
-<!-- \pagenumbering{arabic} -->
-Charles @darwin1909origin in The Origin of Species declared: _“[The] preservation of favourable individual differences and variations, and the destruction of those which are injurious, I have called Natural Selection or Survival of the Fittest. Variations neither useful or injurious would not be affected by natural selection, and would be left either a fluctuating element, as perhaps we see in certain polymorphic species, or would ultimately become fixed, owing to the nature of the organism and the nature of the conditions.”_ This theory set the scene for research in population biology. Selection acts upon the phenotype and this pressure then transfers through to act upon the genetic make-up of that phenotype. Most important to this review is that Darwin’s Theory also created models for what natural selection should look like and the methods for being able to detect selective events on the genetics of organisms. A focus on selection in humans has added insight into past events since migration out of Africa [@Soares2012] and yielded possibilities of the influences on human disease.
+This chapter will set the scene and background for the basis of the research presented in this thesis. It will cover the settlement of the Pacific and highlight the health disparities the Polynesian populations are under. It will then  XXX
+
 
 ## Settlement of Polynesia
 
+The Polynesian triangle is defined as the the geographic region in the Pacific Ocean bounded by \Gls{nz} in the southwest, Hawaii in the north, and Easter Island in the east [\@ref]. The settlement history of this region begins with the Out of Africa migration approximately 50-100 thousand \gls{ya} [@Nielsen2017]. This migration flowed up the Levant and Arabian peninsula (45-55 k\gls{ya}) and then split into a migration to South Asia, Indonesia, and Australia (50 k\gls{ya}, @Kivisild1999; @Quintana-Murci1999), and a migration into Europe was underway (45 k\gls{ya}). From South Asia, the migration continued into East Asia (20 k\gls{ya}, @Groucutt2015). 
+
+Near Oceania is the geographic region from New Guinea and the Bismark Archipelago, through to the Solomon Islands in the east, with the remainder of the Pacific Islands east from the Reef/Santa Cruz group, southeast of the Solomon Island being Remote Oceania [@Matisoo-Smith2018].
+
+
 ## Metabolic syndrome
 
+The World Health Organisation has previously defined Metabolic Syndrome to be glucose intolerance, or diabetes mellitus, and or insulin resistance combined with at least two of the following: impaired glucose regulation or diabetes, insulin resistance, raised arterial pressure, raised plasma triglycerides or low high-density lipoproteins to cholesterol levels, central obesity, and microalbuminuria [@Alberti1998]. \Gls{hu} can also be considered a component but is not required for the condition to be recognised. \gls{hu} is defined as a serum urate $\geq$ 0.42 mmol/L in males and $\geq$ 0.36 mmol/L in females [@Choi2007b]. There has been a slight revision and refinement in the criteria for a diagnosis of metabolic syndrome [@Alberti2009]. The requirement for diabetes mellitus and or insulin resistance is no longer used, instead a requirement of having 3 of the 5 co-morbidities is used.
+
+Obesity is defined as a \gls{bmi} of >30 kg/m^2^ and is a contributing risk factor for many other diseases such as \gls{t2d} and cardiovascular disease [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Polynesian populations obesity is a major problem with an obesity rate of 68%. New Zealand M\tex{\={a}}ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003].
+
+\gls{t2d} is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing \gls{t2d} is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Polynesians and 7% in NZ M\tex{\={a}}ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013]. In New Zealand, the rate of diabetes is twice that in M\tex{\={a}}ori compared to non-M\tex{\={a}}ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
+
 ### Gout
+
+\Gls{hu} is a prerequisite for gout.
+
+## Genetic variation
+
+Genetic variation is the differences in the DNA sequence that occur between individuals of a species. 
+Types of genetic variation include, \glsdesc{snp} which are single base changes, \gls{indel} either additional DNA, or DNA that had been lost, and can be short (up to 100 base pairs) or long (kilobases) at which point that can also become structural variants. Other types of genetic variation includes copy number variation (alterations in the number of copies of a gene from what would be expected from the ploidy of the organism), re-arrangements XXX.
+
+Within population based genetic studies, especially for \gls{gwas} studies, the prominent type of genetic variation that is studied is \glspl{snp}.
+
+## Natural selection
+
+Charles @darwin1909origin in The Origin of Species declared: _“[The] preservation of favourable individual differences and variations, and the destruction of those which are injurious, I have called Natural Selection or Survival of the Fittest. Variations neither useful or injurious would not be affected by natural selection, and would be left either a fluctuating element, as perhaps we see in certain polymorphic species, or would ultimately become fixed, owing to the nature of the organism and the nature of the conditions.”_ This theory set the scene for research in population biology. Selection acts upon the phenotype and this pressure then transfers through to act upon the genetic make-up of that phenotype. Most important to Darwin’s Theory was it created models for what natural selection should look like and the methods for being able to detect selective events on the genetics of organisms. A focus on selection in humans has added insight into past events since migration out of Africa [@Soares2012] and yielded possibilities of the influences on human disease.
+
+
+
+
 
 ## Neutrality and genetic drift
 
@@ -113,7 +141,7 @@ Since 2005 there have been multiple reviews published (see @Nielsen2005, @sabeti
 <!-- make sure to update so that it includes the statistics used -->
 
 
-The different methods for detecting selection work best over different time periods. Recent soft sweeps are able to be detected well with \gls{ld}-based methods, but frequency spectrum tests struggle [@Hermisson2005]. The opposite applies in the case of hard sweeps [@Hermisson2005]. In humans, the method that is able to detect the most ancient selection, ranging to millions of years ago is the Ka/Ks ratio, however if a strong background of neutrality is present this can undermine the effectiveness of the test. \gls{td} is able to detect selection events as old as 250,000 years ago in regions of low diversity containing and excess of rare alleles. \gls{fwh} is able to detect events less than 80,000 years ago based on derived alleles having arisen through mutation and then risen to a high frequency via hitch-hiking. F~ST~, in the range of less than 50,000 to 70,000 years ago, picks up geographic separation of populations that have been subject to different physical and cultural environments based on the changes in allele frequency in one population versus another. Methods relying on long haplotypes such as \gls{ihs} have the shortest range at less than 30,000 years ago for a long haplotype that hasn't had time to break down through recombination and contains a high frequency variant. Partial sweeps can also be detected down to a \gls{maf} of approximately 10% [@sabeti2006positive].
+The different methods for detecting selection work best over different time periods. Recent soft sweeps are able to be detected well with \gls{ld}-based methods, but frequency spectrum tests struggle [@Hermisson2005]. The opposite applies in the case of hard sweeps [@Hermisson2005]. In humans, the method that is able to detect the most ancient selection, ranging to millions of years ago is the Ka/Ks ratio, however if a strong background of neutrality is present this can undermine the effectiveness of the test. \Gls{td} is able to detect selection events as old as 250,000 years ago in regions of low diversity containing and excess of rare alleles. \Gls{fwh} is able to detect events less than 80,000 years ago based on derived alleles having arisen through mutation and then risen to a high frequency via hitch-hiking. F~ST~, in the range of less than 50,000 to 70,000 years ago, picks up geographic separation of populations that have been subject to different physical and cultural environments based on the changes in allele frequency in one population versus another. Methods relying on long haplotypes such as \gls{ihs} have the shortest range at less than 30,000 years ago for a long haplotype that hasn't had time to break down through recombination and contains a high frequency variant. Partial sweeps can also be detected down to a \gls{maf} of approximately 10% [@sabeti2006positive].
 
 ```{r, eval = TRUE, echo = FALSE}
 tibble(
@@ -154,7 +182,7 @@ iHS_{std} = \ln{\frac{iHH_D}{iHH_A}} - \frac{E_p [\ln{\frac{iHH_D}{iHH_A}}] }{ S
 
 #### Cross population extended haplotype homozygosity
 
-\Gls{xpehh}, created by @tang2007new, is also known as Rsb. \Gls{xpehh} was designed for use with \gls{snp} data rather than sequence. \Gls{xpehh} lacks power to detect intermediate frequency variants but is designed to detect variants that are near fixation or completely fixed. The \gls{ehh} of \gls{snp} site (EHHS), integrates to sum the area under the decay by distance in \gls{ehh} (iHH) which is then used as a log ratio between populations at a single site (equation \@ref(eq:xpehh)) and in a standardised form (equation \@ref(eq:xpehhstd)). Recombination rate is mostly conserved within populations so provides an internal control in \gls{xpehh} for effects of heterogeneous recombination rates. Extreme values of \gls{xpehh} indicate a slower decay of \gls{ehh} in one population compared to the other. \Gls{xpehh} relies on the breakdown of \gls{ld} over time and has weak power to detect selective sweeps that were historical and ended thousands of generations ago [@Chen2010]. F~ST~ is better than \gls{xpehh} for differential selection between closely related populations because haplotype-based signals are mostly shared between geographically similar populations [@pickrell2009signals]. 
+\Gls{xpehh}, created by @tang2007new, is also known as Rsb. \Gls{xpehh} was designed for use with \gls{snp} data rather than sequence. \Gls{xpehh} lacks power to detect intermediate frequency variants but is designed to detect variants that are near fixation or completely fixed. The \gls{ehh} of \gls{snp} site (EHHS), integrates to sum the area under the decay by distance in \gls{ehh} (iHH) which is then used as a log ratio between populations at a single site (equation \@ref(eq:xpehh)) and in a standardised form (equation \@ref(eq:xpehhstd)). Recombination rate is mostly conserved within populations, so provides an internal control in \gls{xpehh} for effects of heterogeneous recombination rates. Extreme values of \gls{xpehh} indicate a slower decay of \gls{ehh} in one population compared to the other. \Gls{xpehh} relies on the breakdown of \gls{ld} over time and has weak power to detect selective sweeps that were historical and ended thousands of generations ago [@Chen2010]. F~ST~ is better than \gls{xpehh} for differential selection between closely related populations because haplotype-based signals are mostly shared between geographically similar populations [@pickrell2009signals]. 
 
 \begin{equation} 
  XPEHH_{unstd} = \ln{\frac{iHH_A}{iHH_B}}
@@ -176,7 +204,7 @@ The frequency spectrum methods are based on finding deviations in the frequency 
 
 #### Tajima's _D_
 
-\gls{td} [@Tajima1989] counts the number of segregating sites of individuals in a population and finds the ratio between polymorphisms and pair-wise individual comparisons. \gls{td} is a test of the neutral hypothesis. The hypothesis is rejected when there is an excess of low frequency variants. A negative \gls{td} is indicative of positive selection or weak negative selection but a negative value can also be attributed to population events such as population expansion. Positive values of \gls{td} indicate an excess of intermediate frequency variants. An excess of intermediate frequency variants could also be attributed to balancing selection, population structure, or population bottlenecks [@Kreitman2000; @Nielsen2005; @nielsen2007recent]. The comparison of other polymorphisms, such as changes in \glspl{snp} versus changes in \gls{indel} numbers can provide further evidence for either selection or a population event, since population events should affect both \glspl{snp} and \glspl{indel} in an equal fashion. The direction of \gls{td} after a population bottleneck depends on the strength and duration of the bottleneck and can generate similar \gls{td} values, and can be positive, negative or zero [@Fay1999]. After a population reduction or selective event it is expected the population will have excess rare alleles (recent, low frequency) as the population recovers, therefore \gls{td} will be negative [@Barton1998]. \gls{td} is sensitive to sequencing errors that are called as \glspl{snp} because they appear equivalent to low frequency variants [@Achaz2008].
+\gls{td} [@Tajima1989] counts the number of segregating sites of individuals in a population and finds the ratio between polymorphisms and pair-wise individual comparisons. \Gls{td} is a test of the neutral hypothesis. The hypothesis is rejected when there is an excess of low frequency variants. A negative \gls{td} is indicative of positive selection or weak negative selection but a negative value can also be attributed to population events such as population expansion. Positive values of \gls{td} indicate an excess of intermediate frequency variants. An excess of intermediate frequency variants could also be attributed to balancing selection, population structure, or population bottlenecks [@Kreitman2000; @Nielsen2005; @nielsen2007recent]. The comparison of other polymorphisms, such as changes in \glspl{snp} versus changes in \gls{indel} numbers can provide further evidence for either selection or a population event, since population events should affect both \glspl{snp} and \glspl{indel} in an equal fashion. The direction of \gls{td} after a population bottleneck depends on the strength and duration of the bottleneck and can generate similar \gls{td} values, and can be positive, negative or zero [@Fay1999]. After a population reduction or selective event it is expected the population will have excess rare alleles (recent, low frequency) as the population recovers, therefore \gls{td} will be negative [@Barton1998]. \Gls{td} is sensitive to sequencing errors that are called as \glspl{snp} because they appear equivalent to low frequency variants [@Achaz2008].
 
 #### Fu and Li's and F
 
@@ -186,7 +214,7 @@ The frequency spectrum methods are based on finding deviations in the frequency 
 
 #### Fay and Wu's _H_
 
-\gls{fwh} is sensitive to \glspl{snp} rising to moderate to high frequency and uses an out group to determine the derived/ancestral state of the allele. A positive value indicates a deficit in derived moderate to high frequency \glspl{snp}. A negative value indicates an excess of derived moderate to high frequency \glspl{snp}. \gls{fwh} rejects neutrality when there is an excess of high but not low frequency variants. An increase in the proportion of high frequency variants compared to intermediate frequency variants is a unique signature of positive selection [@fay2000hitchhiking]. \gls{fwh} can be used in regions of low recombination to distinguish hitch-hiking from neutral or background selection where it is expected there will be the same level of intermediate to high frequency variants.
+\gls{fwh} is sensitive to \glspl{snp} rising to moderate to high frequency and uses an out group (such as the ancestral reference sequence) to determine the derived/ancestral state of the allele. A positive value indicates a deficit in derived moderate to high frequency \glspl{snp}. A negative value indicates an excess of derived moderate to high frequency \glspl{snp}. \Gls{fwh} rejects neutrality when there is an excess of high but not low frequency variants. An increase in the proportion of high frequency variants compared to intermediate frequency variants is a unique signature of positive selection [@fay2000hitchhiking]. \Gls{fwh} can be used in regions of low recombination to distinguish hitch-hiking from neutral or background selection where it is expected there will be the same level of intermediate to high frequency variants.
 
 #### Zeng's E
 
@@ -200,7 +228,7 @@ In contrast to \gls{fwh} and \gls{td}, which compare either high or low frequenc
 
 #### F~ST~
 
-F~ST~ is a population differentiation metric that measures the differences in heterogeneity of a sub-population compared to a global population. Initially created by @Wright1951, as an inbreeding coefficient for inbreeding as a whole in a population (equation \@ref(eq:fst)), F~IT~ is the inbreeding coefficient for the individual in the total population and F~IS~ is the inbreeding coefficient for inbreeding of the individual in the subpopulation. These fixation indices provide ways of summarising population structure. Selection will act to drive an allele to fixation, whereas immigration usually reduces the frequency. When the selective advantage is strong, selection will be the dominant force on the locus, however, when the selective advantage is weak the allele will reduce in frequency and disappear. Cockerham [-@Cockerham1969; -@Cockerham1973] equated $\theta$ (population genetic differentiation) with F~ST~, extending F~ST from calculating population structure to population differentiation too. The fixation indices were further developed by @Weir1984 to add population size weightings to the calculation. F~ST~ values fall between 0 and 1, each representing the fixation of an allele. Large differences in F~ST~ values are indicative of population differentiation, suggesting directional selection at that locus, whereas small differences in F~ST~ indicate that the populations are similar. F~ST~ can have high variation in neighbouring loci under neutrality [@Weir2005]. Unless populations are closely related, such as Northwest and south-east Europeans [@Price2008a], the noise will drown out the signal, and identification of genome-wide significance in F~ST~ will be difficult. @Weir2005 suggested taking a sliding window approach to help improve the signal to noise ratio.
+F~ST~ is a population differentiation metric that measures the differences in heterogeneity of a sub-population compared to a global population. Initially created by @Wright1951, as an inbreeding coefficient for inbreeding as a whole in a population (equation \@ref(eq:fst)), F~IT~ is the inbreeding coefficient for the individual in the total population and F~IS~ is the inbreeding coefficient for inbreeding of the individual in the subpopulation. These fixation indices provide ways of summarising population structure. Selection will act to drive an allele to fixation, whereas immigration usually reduces the frequency. When the selective advantage is strong, selection will be the dominant force on the locus, however, when the selective advantage is weak the allele will reduce in frequency and disappear. Cockerham [-@Cockerham1969; -@Cockerham1973] equated $\theta$ (population genetic differentiation) with F~ST~, extending F~ST~ from calculating population structure to population differentiation too. The fixation indices were further developed by @Weir1984 to add population size weightings to the calculation. F~ST~ values fall between 0 and 1, each representing the fixation of an allele. Large differences in F~ST~ values are indicative of population differentiation, suggesting directional selection at that locus, whereas small differences in F~ST~ indicate that the populations are similar. F~ST~ can have high variation in neighbouring loci under neutrality [@Weir2005]. Unless populations are closely related, such as Northwest and south-east Europeans [@Price2008a], the noise will drown out the signal, and identification of genome-wide significance in F~ST~ will be difficult. @Weir2005 suggested taking a sliding window approach to help improve the signal to noise ratio.
 
 \begin{equation} 
 F_{ST} = \frac{F_{IT}{-}F_{IS}}{1{-}F_{IS}}
@@ -213,7 +241,7 @@ F~ST~ has been used in multiple studies as evidence for natural selection [@Akey
 
 #### Selection by conditional coalescent tree
 
-\Gls{scct} (@Wang2014) detects recent positive selection by searching for an imbalance of genetic variants and conditions these on the allele frequencies of the candidate loci. \gls{scct} pinpoints the causal variant more accurately by using a method that is based on the conditional coalescent tree method from @Wiuf1999, where haplotypes are partitioned into two subgroups according to the allelic state at a particular locus. It is assumed one subgroup carries the derived allele at the locus and the other subgroup carries the ancestral allele. The coalescence of a sample of haplotypes conditioning on the particular mutation means each group should coalesce together individually before the two subgroups coalesce. This is a similar idea to that of \gls{ehh} used by \gls{ihs}, and the results of \gls{ihs} and \gls{scct} tends to be similar. The selection statistic (S) is based on comparing the lineage lengths of the two groups. Under neutrality S approaches $\theta$, with significant departures from $\theta$ being considered evidence of positive selection. When natural selection has a strong hitch hiking effect on a selectively favoured allele, \gls{scct} (and \gls{ihs}) is more powerful than \gls{td}, Fay and Wu’s _H_, and measuring change in derived allele frequency (see \@ref(dafsection)). In most cases the power of \gls{scct} is equivalent to \gls{ihs} except when selection is very strong, in which case \gls{ihs} has more power [@Wang2014]. The power of \gls{scct} can be improved by increasing the sample size. \gls{scct} performs moderately to population demographic events (such as bottlenecks) and out performs \gls{td} and \gls{ihs} in false discovery rate, but \gls{fwh} performed the best [@Wang2014].
+\Gls{scct} (@Wang2014) detects recent positive selection by searching for an imbalance of genetic variants and conditions these on the allele frequencies of the candidate loci. \Gls{scct} pinpoints the causal variant more accurately by using a method that is based on the conditional coalescent tree method from @Wiuf1999, where haplotypes are partitioned into two subgroups according to the allelic state at a particular locus. It is assumed one subgroup carries the derived allele at the locus and the other subgroup carries the ancestral allele. The coalescence of a sample of haplotypes conditioning on the particular mutation means each group should coalesce together individually before the two subgroups coalesce. This is a similar idea to that of \gls{ehh} used by \gls{ihs}, and the results of \gls{ihs} and \gls{scct} tends to be similar. The selection statistic (S) is based on comparing the lineage lengths of the two groups. Under neutrality S approaches $\theta$, with significant departures from $\theta$ being considered evidence of positive selection. When natural selection has a strong hitch hiking effect on a selectively favoured allele, \gls{scct} (and \gls{ihs}) is more powerful than \gls{td}, Fay and Wu’s _H_, and measuring change in derived allele frequency (see \@ref(dafsection)). In most cases the power of \gls{scct} is equivalent to \gls{ihs} except when selection is very strong, in which case \gls{ihs} has more power [@Wang2014]. The power of \gls{scct} can be improved by increasing the sample size. \Gls{scct} performs moderately to population demographic events (such as bottlenecks) and out performs \gls{td} and \gls{ihs} in false discovery rate, but \gls{fwh} performed the best [@Wang2014].
 
 #### Change in derived allele frequency {#dafsection}
 
@@ -248,19 +276,19 @@ meta\-SS = \frac{\sum\limits_{i =1}^k {\omega_i Z_i}}{\sqrt{\sum\limits_{i =1}^k
 
 #### Composite selection signals
 
-\gls{css} is similar to meta-SS, in that it is a method for combining the results from multiple selection tests but is not limited to tests that produce P-values [@Randhawa2014]. \gls{css} currently uses F~ST~, \gls{xpehh}, and \gls{ddaf} or change in selected allele frequency, and combines them by taking the test statistic for each method across each \gls{snp}(1,…,n) then obtaining the rank of each statistic across each \gls{snp}(1 … n) and converting these into fractional ranks so they lie between 0 and 1, that is, 1/(n+1) to n/(n+1). By doing this the magnitudes of the original statistics are not used, thus increasing the robustness. The fractional ranks are converted to Z-statistics and the average z-values are calculated at each \gls{snp} position. P-values are obtained from the distribution of the means with the -log10(p) being the \gls{css} value. The \gls{css} is plotted against genomic position with an excess in \gls{css} showing a common signal between the multiple test statistics.
+\Gls{css} is similar to meta-SS, in that it is a method for combining the results from multiple selection tests but is not limited to tests that produce P-values [@Randhawa2014]. \Gls{css} currently uses F~ST~, \gls{xpehh}, and \gls{ddaf} or change in selected allele frequency, and combines them by taking the test statistic for each method across each \gls{snp}(1,…,n) then obtaining the rank of each statistic across each \gls{snp}(1 … n) and converting these into fractional ranks so they lie between 0 and 1, that is, 1/(n+1) to n/(n+1). By doing this the magnitudes of the original statistics are not used, thus increasing the robustness. The fractional ranks are converted to Z-statistics and the average z-values are calculated at each \gls{snp} position. P-values are obtained from the distribution of the means with the -log10(p) being the \gls{css} value. The \gls{css} is plotted against genomic position with an excess in \gls{css} showing a common signal between the multiple test statistics.
 
 ### Power
 
-Power to detect selected sites can be very limited if the site is not an outlier from empirical methods [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if samples > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
+Power to detect selected sites can be very limited if the site is not an outlier from empirical methods [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if samples > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
 
 Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have the best power for detecting moderately old severe bottlenecks [@Depaulis2003], whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008].
 
 ### Challenges
 
-When scanning genome-wide, the variability in the genome also has population demographic events that have acted upon it, such as population bottlenecks, migration, or growth. Mutation and recombination are also acting on the genome. Methods based on comparing non-synonymous to synonymous variants are relatively unaffected, methods based on allele frequency are susceptible to detecting population demographic events along with mutation and recombination rate changes [@Nielsen2009]. Bottlenecks with a meta-population model can lead to a high frequency derived alleles, greater than would have been expected to arise through a neutral model [@Jensen2005]. A meta population is a population which can be subdivided into many different demes among which there is some pattern of migration, extinction, and recolonization [@Wakeley2001]. As previously mentioned by @fay2000hitchhiking, this unique signature of selection is not actually unique [@Przeworski2002].
+When scanning genome-wide in a population (such as in a \gls{gwas}, or genome-wide selection scan), the variability in the genome also has population demographic events that have acted upon it, such as population bottlenecks, migration, or growth. Mutation and recombination are also acting on the genome. Methods based on comparing non-synonymous to synonymous variants are relatively unaffected, methods based on allele frequency are susceptible to detecting population demographic events along with mutation and recombination rate changes [@Nielsen2009]. Bottlenecks with a meta-population model can lead to a high frequency derived alleles, greater than would have been expected to arise through a neutral model [@Jensen2005]. A meta population is a population which can be subdivided into many different demes among which there is some pattern of migration, extinction, and recolonization [@Wakeley2001]. As previously mentioned by @fay2000hitchhiking, this unique signature of selection is not actually unique [@Przeworski2002].
 
-\Gls{snp} ascertainment bias is caused by the non-random sampling of SNPs on array chips. This is a problem that affects the selection detection methods to different extents, with frequency spectrum methods being the most susceptible. \gls{td} is biased upwards due to the \gls{snp} discovery process having ascertainment biases, which leads to an excess of intermediate frequency alleles in the sample [@Kelley2006]. Tests that rely on long haplotypes are less susceptible to ascertainment bias [@sabeti2006positive] but because long haplotypes can be quickly broken down through recombination, they are only useful for short time periods. \Gls{snp} ascertainment bias will be overcome with 
+\Gls{snp} ascertainment bias is caused by the non-random sampling of SNPs on array chips. This is a problem that affects the selection detection methods to different extents, with frequency spectrum methods being the most susceptible. \Gls{td} is biased upwards due to the \gls{snp} discovery process having ascertainment biases, which leads to an excess of intermediate frequency alleles in the sample [@Kelley2006]. Tests that rely on long haplotypes are less susceptible to ascertainment bias [@sabeti2006positive] but because long haplotypes can be quickly broken down through recombination, they are only useful for short time periods. \Gls{snp} ascertainment bias will be overcome with 
 the use of whole genome re-sequencing [@Albrechtsen2010]. 
 
 Many of these statistics were developed to investigate selection at a particular locus, at a time when applying the statistics across a genome was not possible. Up until recently, genome scans have been performed using \gls{snp} genotypes identified through a \gls{snp} discovery process, which means they are not random samples – which would include non \gls{snp} genotypes and create an ascertainment bias [@Nielsen2005a]
@@ -321,11 +349,7 @@ A few candidate-genes for selection which also have associated with obesity and 
 
 ### Gout and metabolic syndrome {#goutMetSyn}
 
-The World Health Organisation has previously defined Metabolic Syndrome to be glucose intolerance, or diabetes mellitus, and or insulin resistance combined with at least two of the following: impaired glucose regulation or diabetes, insulin resistance, raised arterial pressure, raised plasma triglycerides or low HDL-cholesterol, central obesity, and microalbuminuria [@Alberti1998]. Hyperuricaemia can also be considered a component but is not required for the condition to be recognised. Hyperuricaemia is defined as a serum urate $\geq$ 0.42 mmol/L in males and $\geq$ 0.36 mmol/L in females [@Choi2007b]. There has been a slight revision and refinement in the criteria for a diagnosis of metabolic syndrome [@Alberti2009]. The requirement for diabetes mellitus and or insulin resistance is no longer used, instead a requirement of having 3 of the 5 co-morbidities is used.
-
-Obesity is defined as a \gls{bmi} of >30 kg/m^2^ and is a contributing risk factor for many other diseases such as \gls{t2d} and cardiovascular disease [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Polynesian populations obesity is a major problem with an obesity rate of 68%. New Zealand M\tex{\={a}}ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003].
-
-Type II diabetes is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing \gls{t2d} is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Polynesians and 7% in NZ M\tex{\={a}}ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013]. In New Zealand, the rate of diabetes is twice that in M\tex{\={a}}ori compared to non-M\tex{\={a}}ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
+XXX intro
 
 There have been multiple loci associated with \gls{t2d} [@Billings2010], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for \gls{t2d}. The genes associated with \gls{t2d} have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified six \glspl{snp} in or near nine genes that had been reported as \gls{t2d} associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesians suggest there is likely to be some population specific variants that are yet to be identified, similar the Polynesian specific variants in _CREBRF_, associated with obesity and protective for \gls{t2d}, identified in Samoans [@Minster2016. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
